# drf-react-jwt

./: .gitignore  .pylintrc  Makefile  pyproject.toml
backend/accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
frontend/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/pages/: Home.tsx  Layout.tsx  Login.tsx  Register.tsx
