[tool.poetry]
name = "piko-can-fly"
version = "0.1.0"
description = ""
authors = ["Fernando Toledo <fernandohtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.pylint.config_files]
rcfile = ".pylintrc"

[tool.isort]
profile = "black"
known_first_party = ["v1"]
